Проблема отступов решена