@@ -3,7 +3,6 @@ package org.example.deconverter;
 import net.sourceforge.plantuml.FileFormat;
 import net.sourceforge.plantuml.FileFormatOption;
 import net.sourceforge.plantuml.SourceStringReader;
-
 import java.io.ByteArrayOutputStream;
 import java.io.PrintWriter;
 import java.nio.charset.StandardCharsets;
@@ -21,26 +20,26 @@ public class PlantUmlAsciiGenerator {
 
     public void generateAsciiArt(Path inputFile, Path outputDir) throws Exception {
         log("Чтение файла: " + inputFile);
-        String source = Files.readString(inputFile, StandardCharsets.UTF_8);
+        String source = new String(Files.readAllBytes(inputFile), StandardCharsets.UTF_8);
 
         log("Запуск генерации ASCII-art...");
         SourceStringReader reader = new SourceStringReader(source);
         ByteArrayOutputStream os = new ByteArrayOutputStream();
 
+        // Генерация в формате UTXT
         reader.generateImage(os, new FileFormatOption(FileFormat.UTXT));
         os.close();
 
         String result = os.toString(StandardCharsets.UTF_8);
         log("Успешная генерация. Размер результата: " + result.length() + " символов");
 
-        Path outputFile = outputDir.resolve(getBaseName(inputFile) + "_unicode_ascii_result.txt");
-        Files.writeString(outputFile, result, StandardOpenOption.CREATE);
-        log("Результат сохранен: " + outputFile);
-    }
+        // Сохранение результата
+        String fileName = inputFile.getFileName().toString();
+        String baseName = fileName.substring(0, fileName.lastIndexOf('.'));
+        Path outputFile = outputDir.resolve(baseName + "_unicode_ascii_result.txt");
 
-    private String getBaseName(Path path) {
-        String fileName = path.getFileName().toString();
-        return fileName.substring(0, fileName.lastIndexOf('.'));
+        Files.write(outputFile, result.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE);
+        log("Результат сохранен: " + outputFile);
     }
 
     private void log(String message) {
